apps/lldap/middleware.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: authelia-forwardauth
  namespace: lldap
spec:
  forwardAuth:
    address: http://authelia.authelia.svc.cluster.local:9091/api/verify?rd=https://auth.jackhumes.com/
    trustForwardHeader: true
    authResponseHeaders:
      - Remote-User
      - Remote-Groups
      - Remote-Name
      - Remote-Email
