apps/lldap/ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: lldap
  namespace: lldap
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`lldap.lab.jackhumes.com`)
      kind: Rule
      # Temporarily disabled to fix service account group
      # middlewares:
      #   - name: authelia-forwardauth
      services:
        - name: lldap
          port: 17170
  tls:
    secretName: lldap-tls
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: lldap-http
  namespace: lldap
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`lldap.lab.jackhumes.com`)
      kind: Rule
      services:
        - name: lldap
          port: 17170
      middlewares:
        - name: redirect-https
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: lldap
spec:
  redirectScheme:
    scheme: https
    permanent: true
